--- a/css/main.css
+++ b/css/main.css
@@ -169,3 +169,61 @@ footer span {
 	color: #45610E;
 	font-size: .875rem; /* font-size: 14px */
 }
+
+/******** MEDIA QUERY TABLET & DESKTOP ********/
+@media all and (min-width: 768px) {
+ /* Tablet styles here */
+
+	/******** BOTTOM SECTION ********/
+	.bottom-section .content-wrapper {
+		justify-content: space-evenly;
+	}
+
+	.section-one {
+		width: 26%;
+	}
+
+	.section-two {
+		width: 40%;
+		border-left: 5px solid #EEE;
+		border-right: 5px solid #EEE;
+		border-top: none;
+		border-bottom: none;
+		padding: 0 30px;
+	}
+
+	.section-three {
+		width: 26%;
+	}
+}
+
+ 
+@media all and (min-width: 1200px) {
+    /* Desktop styles here */
+
+	body {
+		font-size: 1em;
+	}
+
+	header .content-wrapper {
+		justify-content: space-between;
+		align-items: center;
+		padding: 20px 0;
+	}
+
+	header h1 {
+		width: 30%;
+		padding: 0;
+		border-bottom: none;
+		text-align: left;
+	}
+
+	header nav {
+		width: 21%;
+	}
+
+	header nav ul {
+		display: flex;
+		justify-content: space-between;
+	}
+}
